# clap_shortcuts

./: Cargo.toml  README.md
clap_shortcuts/: Cargo.toml
clap_shortcuts/examples/: short.rs  simple.rs
clap_shortcuts/src/: lib.rs
clap_shortcuts_derive/: Cargo.toml
clap_shortcuts_derive/doc/: attributs_derive.md
clap_shortcuts_derive/src/: lib.rs
