[package]
name = "clap_shortcuts"
version = "0.1.0"
edition = "2021"
description = "library to generate clap args to execute function on field structs"
publish = false # TODO need to merge inquire-time into upstream or publish it
repository = "https://github.com/Cyrix126/clap_shortcuts"
license = "GPL-3.0-only"
readme = "README.md"
authors = ["Louis-Marie Baer <lm@baermail.fr>"]
keywords = ["cli", "ask", "prompt", "question", "interactive", "derive"]
categories = ["command-line-interface", "derive"]

[dependencies]
clap = {version="4.4.18", features=["derive"]}
anyhow = "1.0.79"
clap_shortcuts_derive = {path ="../clap_shortcuts_derive", optional=true}

[features]
default=["derive"]
derive=["clap_shortcuts_derive"]
